src/Orchid.Lang/Parser/OrchidParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from OrchidParser.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Orchid.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class OrchidParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		MultiLineComment=1, SingleLineComment=2, BooleanLiteral=3, StringLiteral=4, 
		NumericLiteral=5, Integer=6, Float=7, Dot=8, And=9, Or=10, Not=11, If=12, 
		Else=13, ElseIf=14, Then=15, Unless=16, Do=17, While=18, Loop=19, For=20, 
		Return=21, Function=22, End=23, Break=24, Next=25, Continue=26, Print=27, 
		Val=28, PlusPlus=29, MinusMinus=30, MulEq=31, PlusEq=32, MinusEq=33, DivEq=34, 
		SemiColon=35, Mul=36, Div=37, Plus=38, Sub=39, Mod=40, Pow=41, Amp=42, 
		Gt=43, Gte=44, Lt=45, Lte=46, Eq=47, Assign=48, NotEq=49, UnaryNot=50, 
		LogicalAnd=51, LogicalOr=52, Colon=53, Comma=54, PowerOp=55, Question=56, 
		OpenRound=57, CloseRound=58, Arrow=59, OpenSquare=60, CloseSquare=61, 
		OpenCurly=62, CloseCurly=63, Name=64, Variable=65, WhiteSpace=66, Discardable=67;
	public const int
		RULE_program = 0, RULE_statementList = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_arrowFunctions = 4, RULE_expressionStatement = 5, RULE_assignmentOperatorStatement = 6, 
		RULE_functionDeclaration = 7, RULE_formalParameterList = 8, RULE_ifStatement = 9, 
		RULE_returnStatement = 10, RULE_printStatement = 11, RULE_assignmentStatement = 12, 
		RULE_declarationStatement = 13, RULE_iterationStatement = 14, RULE_variableDeclarationList = 15, 
		RULE_expressionSequence = 16, RULE_prefixStatement = 17, RULE_postfixStatement = 18, 
		RULE_singleExpression = 19, RULE_multiplicativeOperators = 20, RULE_additiveOperators = 21, 
		RULE_prefixPostfixOps = 22, RULE_logicalAndOperators = 23, RULE_logicalOrOperators = 24, 
		RULE_comparisonOperators = 25, RULE_assignmentOperators = 26, RULE_functionCall = 27, 
		RULE_identifier = 28, RULE_arrayLiteral = 29, RULE_literal = 30, RULE_eos = 31;
	public static readonly string[] ruleNames = {
		"program", "statementList", "statement", "block", "arrowFunctions", "expressionStatement", 
		"assignmentOperatorStatement", "functionDeclaration", "formalParameterList", 
		"ifStatement", "returnStatement", "printStatement", "assignmentStatement", 
		"declarationStatement", "iterationStatement", "variableDeclarationList", 
		"expressionSequence", "prefixStatement", "postfixStatement", "singleExpression", 
		"multiplicativeOperators", "additiveOperators", "prefixPostfixOps", "logicalAndOperators", 
		"logicalOrOperators", "comparisonOperators", "assignmentOperators", "functionCall", 
		"identifier", "arrayLiteral", "literal", "eos"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, "'.'", "'and'", "'or'", 
		"'not'", "'if'", "'else'", "'elseif'", "'then'", "'unless'", "'do'", "'while'", 
		"'loop'", "'for'", "'return'", "'func'", "'end'", "'break'", "'next'", 
		"'continue'", "'print'", "'val'", "'++'", "'--'", "'*='", "'+='", "'-='", 
		"'/='", "';'", "'*'", "'/'", "'+'", "'-'", "'%'", "'^'", "'&'", "'>'", 
		"'>='", "'<'", "'<='", "'='", "':='", "'!='", "'!'", "'&&'", "'||'", "':'", 
		"','", "'**'", "'?'", "'('", "')'", "'->'", "'['", "']'", "'{'", "'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "MultiLineComment", "SingleLineComment", "BooleanLiteral", "StringLiteral", 
		"NumericLiteral", "Integer", "Float", "Dot", "And", "Or", "Not", "If", 
		"Else", "ElseIf", "Then", "Unless", "Do", "While", "Loop", "For", "Return", 
		"Function", "End", "Break", "Next", "Continue", "Print", "Val", "PlusPlus", 
		"MinusMinus", "MulEq", "PlusEq", "MinusEq", "DivEq", "SemiColon", "Mul", 
		"Div", "Plus", "Sub", "Mod", "Pow", "Amp", "Gt", "Gte", "Lt", "Lte", "Eq", 
		"Assign", "NotEq", "UnaryNot", "LogicalAnd", "LogicalOr", "Colon", "Comma", 
		"PowerOp", "Question", "OpenRound", "CloseRound", "Arrow", "OpenSquare", 
		"CloseSquare", "OpenCurly", "CloseCurly", "Name", "Variable", "WhiteSpace", 
		"Discardable"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "OrchidParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static OrchidParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public OrchidParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public OrchidParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(OrchidParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOrchidParserVisitor<TResult> typedVisitor = visitor as IOrchidParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			statementList();
			State = 65;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.EnterStatementList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.ExitStatementList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOrchidParserVisitor<TResult> typedVisitor = visitor as IOrchidParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementListContext statementList() {
		StatementListContext _localctx = new StatementListContext(Context, State);
		EnterRule(_localctx, 2, RULE_statementList);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 67;
					statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 70;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IterationStatementContext iterationStatement() {
			return GetRuleContext<IterationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationStatementContext declarationStatement() {
			return GetRuleContext<DeclarationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentStatementContext assignmentStatement() {
			return GetRuleContext<AssignmentStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintStatementContext printStatement() {
			return GetRuleContext<PrintStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrefixStatementContext prefixStatement() {
			return GetRuleContext<PrefixStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PostfixStatementContext postfixStatement() {
			return GetRuleContext<PostfixStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentOperatorStatementContext assignmentOperatorStatement() {
			return GetRuleContext<AssignmentOperatorStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOrchidParserVisitor<TResult> typedVisitor = visitor as IOrchidParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 72;
				iterationStatement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 73;
				declarationStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 74;
				assignmentStatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 75;
				block();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 76;
				ifStatement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 77;
				functionDeclaration();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 78;
				functionCall();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 79;
				returnStatement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 80;
				printStatement();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 81;
				prefixStatement();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 82;
				postfixStatement();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 83;
				assignmentOperatorStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Do() { return GetToken(OrchidParser.Do, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode End() { return GetToken(OrchidParser.End, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOrchidParserVisitor<TResult> typedVisitor = visitor as IOrchidParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(Do);
			State = 87;
			statementList();
			State = 88;
			Match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrowFunctionsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenCurly() { return GetToken(OrchidParser.OpenCurly, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FormalParameterListContext formalParameterList() {
			return GetRuleContext<FormalParameterListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Arrow() { return GetToken(OrchidParser.Arrow, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseCurly() { return GetToken(OrchidParser.CloseCurly, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SingleExpressionContext singleExpression() {
			return GetRuleContext<SingleExpressionContext>(0);
		}
		public ArrowFunctionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrowFunctions; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.EnterArrowFunctions(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.ExitArrowFunctions(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOrchidParserVisitor<TResult> typedVisitor = visitor as IOrchidParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrowFunctions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArrowFunctionsContext arrowFunctions() {
		ArrowFunctionsContext _localctx = new ArrowFunctionsContext(Context, State);
		EnterRule(_localctx, 8, RULE_arrowFunctions);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			Match(OpenCurly);
			State = 91;
			formalParameterList();
			State = 92;
			Match(Arrow);
			State = 95;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 93;
				statementList();
				}
				break;
			case 2:
				{
				State = 94;
				singleExpression(0);
				}
				break;
			}
			State = 97;
			Match(CloseCurly);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionSequenceContext expressionSequence() {
			return GetRuleContext<ExpressionSequenceContext>(0);
		}
		public ExpressionStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.EnterExpressionStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.ExitExpressionStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOrchidParserVisitor<TResult> typedVisitor = visitor as IOrchidParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionStatementContext expressionStatement() {
		ExpressionStatementContext _localctx = new ExpressionStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_expressionStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			expressionSequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentOperatorStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentOperatorsContext assignmentOperators() {
			return GetRuleContext<AssignmentOperatorsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SingleExpressionContext singleExpression() {
			return GetRuleContext<SingleExpressionContext>(0);
		}
		public AssignmentOperatorStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignmentOperatorStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.EnterAssignmentOperatorStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.ExitAssignmentOperatorStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOrchidParserVisitor<TResult> typedVisitor = visitor as IOrchidParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignmentOperatorStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentOperatorStatementContext assignmentOperatorStatement() {
		AssignmentOperatorStatementContext _localctx = new AssignmentOperatorStatementContext(Context, State);
		EnterRule(_localctx, 12, RULE_assignmentOperatorStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			identifier();
			State = 102;
			assignmentOperators();
			State = 103;
			singleExpression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationContext : ParserRuleContext {
		public StatementListContext body;
		public SingleExpressionContext expr;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Function() { return GetToken(OrchidParser.Function, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenRound() { return GetToken(OrchidParser.OpenRound, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FormalParameterListContext formalParameterList() {
			return GetRuleContext<FormalParameterListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseRound() { return GetToken(OrchidParser.CloseRound, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode End() { return GetToken(OrchidParser.End, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Arrow() { return GetToken(OrchidParser.Arrow, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SingleExpressionContext singleExpression() {
			return GetRuleContext<SingleExpressionContext>(0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.EnterFunctionDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOrchidParserListener typedListener = listener as IOrchidParserListener;
			if (typedListener != null) typedListener.ExitFunctionDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOrchidParserVisitor<TResult> typedVisitor = visitor as IOrchidParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclarationContext functionDeclaration() {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 14, RULE_functionDeclaration);
		try {
			State = 131;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 105;
				Match(Function);
				State = 106;
				identifier();
				State = 107;
				Match(OpenRound);
				State = 108;
				formalParameterList();
				State = 109;
				Match(CloseRound);
				State = 110;
				_localctx.body = statementList();
				State = 111;
				Match(End);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 113;
				Match(Function);
				State = 114;
				identifier();
				State = 115;
				_localctx.body = statementList();
				State = 116;
				Match(End);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 118;
				Match(Function);
				State = 119;
				identifier();
				State = 120;
				Match(OpenRound);
				State = 121;
				formalParameterList();
				State = 122;
				Match(CloseRound);
				State = 123;
				Match(Arrow);
				State = 124;
				_localctx.expr = singleExpression(0);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 126;
				Match(Function);
				State = 127;
				identifier();
				State = 128;
				Match(Arrow);
				State = 129;
				_localctx.expr = singleExpression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
